tests/test_assets/semantic/invalid/declarations/constant_division_by_zero.cog
BAD_DIV :: 1 / 0;