tests/test_assets/semantic/invalid/declarations/constant_division_by_zero.expected
semantic error at line 1: division by zero in constant expression
1 semantic error generated.
